tests/misc/t23240.nim
discard """
  cmd: "nim c foo/bar.nim"
  action: "reject"
  errormsg: "cannot open 'foo/'"
  file: ""
"""
